:lipstick: :sparkles: feat: Add the user links hug

--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -82,7 +82,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/profile_description"
+            android:id="@+id/user_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
@@ -91,6 +91,98 @@
             android:textColor="@color/blue_transparent"
             android:textSize="18sp" />
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/user_links_hug"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/user_link_01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Link para site"
+                android:padding="2dp"
+                android:src="@drawable/icon_plus"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/user_link_02"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/Theme.Arbeid.CircularImageView"
+                app:strokeColor="@color/grey"
+                app:strokeWidth="2dp"
+                app:tint="@color/grey" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/user_link_02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Adicionar link"
+                android:padding="2dp"
+                android:src="@drawable/icon_plus"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/user_link_03"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/user_link_01"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/Theme.Arbeid.CircularImageView"
+                app:strokeColor="@color/grey"
+                app:strokeWidth="2dp"
+                app:tint="@color/grey" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/user_link_03"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Adicionar link"
+                android:padding="2dp"
+                android:src="@drawable/icon_plus"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/user_link_04"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/user_link_02"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/Theme.Arbeid.CircularImageView"
+                app:strokeColor="@color/grey"
+                app:strokeWidth="2dp"
+                app:tint="@color/grey" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/user_link_04"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Adicionar link"
+                android:padding="2dp"
+                android:src="@drawable/icon_plus"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/user_link_05"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/user_link_03"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/Theme.Arbeid.CircularImageView"
+                app:strokeColor="@color/grey"
+                app:strokeWidth="2dp"
+                app:tint="@color/grey" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/user_link_05"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Adicionar link"
+                android:padding="2dp"
+                android:src="@drawable/icon_plus"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/user_link_04"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/Theme.Arbeid.CircularImageView"
+                app:strokeColor="@color/grey"
+                app:strokeWidth="2dp"
+                app:tint="@color/grey" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
 </RelativeLayout>
