--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -71,8 +71,8 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginStart="20dp"
                 android:contentDescription="Clique para editar o seu nome"
                 android:src="@drawable/icon_edit"
@@ -85,7 +85,7 @@
             android:id="@+id/user_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="15dp"
             android:fontFamily="@font/poppins"
             android:text="Lorem ipsum dolor sit amet sirius melir lorem ipsum dolor sit ame..."
             android:textColor="@color/blue_transparent"
@@ -194,7 +194,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -203,6 +207,7 @@
                     android:contentDescription="Adicionar competência"
                     android:src="@drawable/icon_plus"
                     app:tint="@color/orange" />
+
                 <TextView
                     android:id="@+id/title_user_skills"
                     android:layout_width="wrap_content"
@@ -224,7 +229,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -233,6 +242,7 @@
                     android:contentDescription="Adicionar competência"
                     android:src="@drawable/icon_plus"
                     app:tint="@color/orange" />
+
                 <TextView
                     android:id="@+id/title_user_experience"
                     android:layout_width="wrap_content"
