--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -47,9 +47,10 @@
     <LinearLayout
         android:id="@+id/profile_main_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/profile_top_layout"
         android:layout_marginHorizontal="38dp"
+        android:layout_marginBottom="30dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -247,12 +248,26 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/profile_bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/profile_main_layout"
+        android:background="@color/light_grey"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/no_post_view"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Essa conta ainda não possui postagens."
+            android:textAlignment="center"
+            android:textColor="@color/dark_grey"
+            android:textSize="18sp"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
