--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -25,7 +25,6 @@
                 android:background="@color/grey"
                 android:contentDescription="Papel de parede do usuário"
                 android:scaleType="centerCrop"
-                android:src="TODO"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +46,6 @@
                     android:contentDescription="Foto do usuário"
                     android:padding="10dp"
                     android:scaleType="centerCrop"
-                    android:src="TODO"
                     app:shapeAppearanceOverlay="@style/Theme.Arbeid.CircularImageView"
                     app:strokeColor="@color/white"
                     app:strokeWidth="12dp" />
@@ -122,7 +120,7 @@
                     android:contentDescription="Link para site"
                     android:padding="2dp"
                     android:src="@drawable/icon_plus"
-                    app:layout_constraintBottom_toBottomOf="user"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/user_link_02"
                     app:layout_constraintHorizontal_chainStyle="spread_inside"
                     app:layout_constraintStart_toStartOf="parent"
