--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -280,82 +280,18 @@
             android:id="@+id/profile_bottom_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:minHeight="100dp"
             android:layout_below="@id/profile_main_layout"
             android:background="@color/white"
+            android:minHeight="200dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/no_post_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:gravity="center"
                 android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
-                android:textColor="@color/blue_transparent"
-                android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Essa conta ainda não possui postagens."
+                android:textAlignment="center"
                 android:textColor="@color/blue_transparent"
                 android:textSize="18sp" />
 
