--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -196,15 +196,19 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.cardview.widget.CardView
                 android:id="@+id/user_skills"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp">
+                android:layout_marginBottom="30dp"
+                app:cardElevation="10dp"
+                app:contentPadding="10dp">
 
                 <LinearLayout
+                    android:id="@+id/user_skills_selector"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -230,16 +234,21 @@
                         android:textStyle="bold" />
                 </LinearLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.cardview.widget.CardView
                 android:id="@+id/user_experience"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                app:cardElevation="10dp"
+                app:contentPadding="10dp">
 
                 <LinearLayout
+                    android:id="@+id/user_experience_selector"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -265,7 +274,7 @@
                         android:textStyle="bold" />
                 </LinearLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
@@ -274,16 +283,17 @@
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_below="@id/profile_main_layout"
-            android:gravity="bottom"
             android:background="@color/light_grey"
+            android:gravity="bottom"
             android:orientation="horizontal">
 
             <FrameLayout
                 android:id="@+id/left_tab_selector_wrapper"
                 android:layout_width="205dp"
                 android:layout_height="50dp"
-                android:backgroundTint="@color/white"
-                android:background="@drawable/tab_selector_user_profile">
+                android:background="@drawable/tab_selector_user_profile"
+                android:backgroundTint="@color/white">
+
                 <Button
                     android:id="@+id/left_tab_selector"
                     android:layout_width="match_parent"
@@ -298,6 +308,7 @@
                 android:layout_width="205dp"
                 android:layout_height="50dp"
                 android:background="@drawable/tab_selector_user_profile">
+
                 <Button
                     android:id="@+id/right_tab_selector"
                     android:layout_width="match_parent"
