--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -201,37 +201,51 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
+                android:clickable="true"
+                android:focusable="true"
                 app:cardElevation="10dp"
                 app:contentPadding="10dp">
 
                 <LinearLayout
-                    android:id="@+id/user_skills_selector"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="center"
-                        android:layout_marginEnd="10dp"
-                        android:contentDescription="Adicionar competência"
-                        android:src="@drawable/icon_plus"
-                        app:tint="@color/orange" />
+                    <LinearLayout
+                        android:id="@+id/user_skills_selector"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="10dp"
+                            android:contentDescription="Adicionar competência"
+                            android:src="@drawable/icon_plus"
+                            app:tint="@color/orange" />
+
+                        <TextView
+                            android:id="@+id/title_user_skills"
+                            android:layout_width="wrap_content"
+                            android:layout_height="24dp"
+                            android:fontFamily="@font/poppins"
+                            android:text="Competências"
+                            android:textColor="@color/orange"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
 
                     <TextView
-                        android:id="@+id/title_user_skills"
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:fontFamily="@font/poppins"
-                        android:text="Competências"
-                        android:textColor="@color/orange"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:id="@+id/user_skills_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:text="@string/lorem_ipsum"
+                        android:visibility="gone" />
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -245,33 +259,48 @@
                 app:contentPadding="10dp">
 
                 <LinearLayout
-                    android:id="@+id/user_experience_selector"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="center"
-                        android:layout_marginEnd="10dp"
-                        android:contentDescription="Adicionar competência"
-                        android:src="@drawable/icon_plus"
-                        app:tint="@color/orange" />
+                    <LinearLayout
+                        android:id="@+id/user_experience_selector"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="10dp"
+                            android:contentDescription="Adicionar competência"
+                            android:src="@drawable/icon_plus"
+                            app:tint="@color/orange" />
+
+                        <TextView
+                            android:id="@+id/title_user_experience"
+                            android:layout_width="wrap_content"
+                            android:layout_height="24dp"
+                            android:fontFamily="@font/poppins"
+                            android:text="Experiência"
+                            android:textColor="@color/orange"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
 
                     <TextView
-                        android:id="@+id/title_user_experience"
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:fontFamily="@font/poppins"
-                        android:text="Experiência"
-                        android:textColor="@color/orange"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:id="@+id/user_experience_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:text="@string/lorem_ipsum"
+                        android:visibility="gone" />
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
