--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -65,8 +65,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/profile_top_layout"
-            android:layout_marginHorizontal="38dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginBottom="15dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -98,6 +98,7 @@
                 android:id="@+id/user_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginVertical="10dp"
                 android:fontFamily="@font/poppins"
                 android:text="Lorem ipsum dolor sit amet sirius melir lorem ipsum dolor sit ame..."
@@ -200,11 +201,11 @@
                 android:id="@+id/user_skills"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
                 android:layout_marginBottom="30dp"
-                android:clickable="true"
-                android:focusable="true"
+                app:cardCornerRadius="10dp"
                 app:cardElevation="10dp"
-                app:contentPadding="10dp">
+                app:contentPadding="15dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -215,7 +216,6 @@
                         android:id="@+id/user_skills_selector"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -242,6 +242,7 @@
                         android:id="@+id/user_skills_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:orientation="horizontal"
                         android:text="@string/lorem_ipsum"
                         android:visibility="gone" />
@@ -254,9 +255,11 @@
                 android:id="@+id/user_experience"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
                 android:layout_marginBottom="30dp"
+                app:cardCornerRadius="10dp"
                 app:cardElevation="10dp"
-                app:contentPadding="10dp">
+                app:contentPadding="15dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -267,7 +270,6 @@
                         android:id="@+id/user_experience_selector"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -297,6 +299,7 @@
                         android:id="@+id/user_experience_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:orientation="horizontal"
                         android:text="@string/lorem_ipsum"
                         android:visibility="gone" />
