--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -238,14 +238,23 @@
                             android:textStyle="bold" />
                     </LinearLayout>
 
-                    <TextView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/user_skills_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:orientation="horizontal"
-                        android:text="@string/lorem_ipsum"
-                        android:visibility="gone" />
+                        android:backgroundTint="@color/light_grey"
+                        app:contentPadding="10dp"
+                        app:cardCornerRadius="15dp"
+                        android:visibility="gone">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Lorem ipsum"
+                            android:textSize="16sp" />
+
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
@@ -295,14 +304,23 @@
                             android:textStyle="bold" />
                     </LinearLayout>
 
-                    <TextView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/user_experience_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:orientation="horizontal"
-                        android:text="@string/lorem_ipsum"
-                        android:visibility="gone" />
+                        android:backgroundTint="@color/light_grey"
+                        app:contentPadding="10dp"
+                        app:cardCornerRadius="15dp"
+                        android:visibility="gone">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Lorem ipsum"
+                            android:textSize="16sp" />
+
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
